Rename `Organization` entity to `Organisation`
