# routes/organisations.js
@@ -2,9 +2,10 @@ var express = require("express");
 const jwt = require("jsonwebtoken");
 const passport = require("passport");
 const bcrypt = require("bcrypt");
-const { Organization, User } = require("../models");
+const { Organisation, User } = require("../models");
 var router = express.Router({ mergeParams: true });
 
+const SALT_ROUNDS = parseInt(process.env.SALT_ROUNDS || "10");
 router.get("/", function (req, res, next) {
   res.render("index", { title: "Org root page" });
 });
@@ -12,13 +13,13 @@ router.get("/", function (req, res, next) {
 router.post("/", async function (req, res, next) {
   const name = req.body.name;
   try {
-    const org = await Organization.add(name);
-    const hashedPwd = await bcrypt.hash(req.body.password, process.env.SALT_ROUNDS);
+    const org = await Organisation.add(name);
+    const hashedPwd = await bcrypt.hash(req.body.password, SALT_ROUNDS);
     const user = await User.create({
       name: req.body.user_name,
       email: req.body.email,
       password: hashedPwd,
-      organization_id: org.id,
+      organisation_id: org.id,
     });
     req.login(user, { session: false }, (err) => {
       if (err) {
@@ -26,7 +27,7 @@ router.post("/", async function (req, res, next) {
       }
       let sanatisedUser = user.toJSON();
       delete sanatisedUser["password"];
-      const token = jwt.sign(sanatisedUser, process.env.JWT_SECRET);
+      const token = jwt.sign(sanatisedUser, process.env.JWT_SECRET || "your_jwt_secret" );
       return res.json({ user: sanatisedUser, token });
     });
   } catch (error) {
@@ -34,13 +35,13 @@ router.post("/", async function (req, res, next) {
     return res.json(error);
   }
 });
-router.get("/:organizationID", async function (req, res, next) {
-  const org = await Organization.show(parseInt(req.params.organizationID));
+router.get("/:organisationID", async function (req, res, next) {
+  const org = await Organisation.show(parseInt(req.params.organisationID));
   return res.json(org);
 });
 
-router.delete("/:organizationID", async function (req, res, next) {
-  const org = await Organization.delete(parseInt(req.params.organizationID));
+router.delete("/:organisationID", async function (req, res, next) {
+  const org = await Organisation.delete(parseInt(req.params.organisationID));
   return res.json(org);
 });
 
